
13-Oct-2010 Jean-Marie Simonet
 # Loading new lib_joomla.ini file through includes/application.php breaks langswitcher. Correcting until final decision is taken to separate Framework.
 # [#22835] Enabling browser lang sniffing in langfilter system plugin.
 # [#22858] news feed - 2 level subcategory feed name link causes error. Thanks Bill.
 
13-Oct-2010 Andrew Eddie
 # Fixed issue [#21343] Email is not spamprotected in search (Janich Rasmussen, Joseph LeBlanc, Hannes Papenberg).
 # Fixed issue [#22809] [patch] loadmodule plugin incorrectly handles positions with the same name (Artyom Bisyarin).

12-Oct-2010 Mark Dexter
# [#22837] Commit of #22710 leads to display errors when trashing, deleting or archiving category

12-Oct-2010 Jean-Marie Simonet
 # [#22755] Backend module menu assignment improvements and fixes. Thanks Dennis.
 # [#21792] Alternate Page Title does not show. Thanks Bill.
 $# Separating joomla libraries ini strings from main ini. Temporary load via application.php. TBD: load through library to prepare for framework separation.
 
11-Oct-2010 Mark Dexter
# [#22819] Clean up errors in new ACL UI

11-Oct-2010 Christophe Demko
 # Fix language filter plugin for routing
 # [#22038] PHP information (Dennis Hermacki)
 # [#22813] Installation language file - missing entry for STEPS (Serge Litvinov)

10-Oct-2010 Mark Dexter
# Fix invalid lft,rgt values in jos_menus in sample data

10-Oct-2010 Christophe Demko
 # [#22794] XML self closing tag syntax used on li in com_media (Rouven Weßling)

9-Oct-2010 Christophe Demko
 # [#22057] [patch] Broken unit tests for some form fields (Artyom Bisyarin)
 # [#21644] [patch] Unable to get group of a form field (Artyom Bisyarin)
 # [#22770] System - Language filter plugin is buggy if the link is comes from the home page menu
 # [#22769] Some language filtering missing
 # [#22777] Module breadcrumbs does not deal correctly with language filter plugin